chg: use of pattern matching switch